# agentic-connected-vehicle-platform

./: .dockerignore  .env.docker.sample  .gitignore  ARCHITECTURE.md  Dockerfile  PROJECT.md  README.md  docker-build.ps1  docker-compose.yml  docker-entrypoint.sh
backend/: .env.azure.sample  main.py  pyproject.toml  start.bat  start.sh
backend/agents/: __init__.py  agent_manager.py  agent_routes.py  alerts_notifications_agent.py  base_agent.py  diagnostics_battery_agent.py  information_services_agent.py  remote_access_agent.py  safety_emergency_agent.py  vehicle_feature_control_agent.py
backend/azure/: azure_init.py  azure_vehicle_agent.py  cosmos_data_generator.py  cosmos_db.py
backend/models/: service.py
backend/simulator/: car_simulator.py
backend/tests/: test_azure_integration.py
backend/utils/: agent_tools.py  semantic_kernel_manager.py
backend/vehicle_handler/: README.md  __init__.py  vehicle_api_executor.py  vehicle_data_manager.py  vehicle_handler.py  vehicle_notification_handler.py  vehicle_profile_manager.py  vehicle_service_manager.py
vehicle/: .env.sample  main.py  pyproject.toml  seed_test_vehicle.rest
vehicle/agents/: __init__.py  agent_manager.py  alerts_notifications_agent.py  base_agent.py  charging_energy_agent.py  diagnostics_battery_agent.py  information_services_agent.py  remote_access_agent.py  safety_emergency_agent.py  vehicle_feature_control_agent.py
vehicle/apis/: agent_routes.py  emergency_routes.py  remote_access_routes.py  seed_routes.py  speech_routes.py  vehicle_feature_routes.py
vehicle/azure/: azure_auth.py  azure_init.py  azure_vehicle_agent.py  cosmos_data_generator.py  cosmos_db.py
vehicle/models/: agent_request.py  agent_response.py  api_request.py  api_responses.py  base.py  command.py  notification.py  seed.py  service.py  status.py  vehicle.py  (+2 more)
(+142 files in other folders)
